--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,6 +2,6 @@
 
 primaryColor = '#a569bd' # Purple
 
-backgroundColor = '#fdf2e9' # belge
+backgroundColor = '#d0c7f3' # belge
 
 secondaryBackgroundColor = '#aeb6bf' # Gray
