--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -2,7 +2,7 @@
 
 primaryColor = '#a569bd' # Purple
 
-backgroundColor =  '#aeb6bf' # Gray
+backgroundColor =  '#f0eef5' # Gray
 
 
 secondaryBackgroundColor = '#d0c7f3' # belge
